Fix alignment of card footer items in Edge

--- a/src/styles/application/_tutorialCard.scss
+++ b/src/styles/application/_tutorialCard.scss
@@ -18,18 +18,12 @@
   }
 
   &-pf-footer {
+    display: flex;
+    justify-content: space-between;
     position: absolute;
     width: 100%;
     bottom: 0;
     padding-bottom: 20px;
-    display: flex;
-
-    .progress-bar-table { /* stylelint-disable-line selector-class-pattern */
-      display: table;
-      width: auto;
-      float: right;
-      margin-left: 50px;
-    }
 
     .progress { /* stylelint-disable-line selector-class-pattern */
       display: table-cell;
